# textrank-rust

./: .gitmodules  Cargo.toml
src/: lib.rs  pos.rs  stoplist.rs  util.rs
