[package]
name = "textrank-rust"
version = "0.1.0"
authors = ["Fred Lahde <frederick.lahde@worldiety.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
serde_json = "1.0.51"
serde_derive = "1.0.106"
serde = "1.0.106"

[dependencies.rust-senna]
git = "https://github.com/fredlahde/rust-senna.git"
version = "*"